--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard-dynamic-subset.css"
     />
     <link rel="stylesheet" href="./style/index.css" />
-    <script src="js/navigation.js" defer></script>
+    <!-- <script src="js/navigation.js" defer></script> -->
   </head>
   <body>
     <div class="container">
