모던 속성 실습

--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
             </h2>
             <div class="twitter__container">
               <dl class="twitter__userInfo">
-                <dt class="a11yHidden">사용자 이름</dt>
+                <dt class="sr-only">사용자 이름</dt>
                 <dd class="twitter__userName">김데레사</dd>
-                <dt class="a11yHidden">사용자 아이디</dt>
+                <dt class="sr-only">사용자 아이디</dt>
                 <dd class="twitter__userId">
                   <a href="/" class="accentTwitter">@seulbinim</a>
                 </dd>
